# chesson

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pytest.ini
chess/: board.py  constants.py  exceptions.py  fen.py  game.py  move.py  pieces.py  position.py  ui.py
chess/ui/: ui.py  ui_constants.py
tests/: conftest.py  test_game.py
tests/chess/: conftest.py  test_board.py
